fhir/6.0.0/POST_schedule-measurement-stats.md
# POST Schedule Measurement Stats - eHealth Infrastructure v6.0.0

* [**Table of Contents**](toc.md)
* **POST Schedule Measurement Stats**

## POST Schedule Measurement Stats

`POST [base]/$schedule-measurement-stats`

**Header**

```
Accept-Charset: utf-8
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiOWZhZjliZWItMmUyNS00ZjhhLTkwM2EtZTJiOTkwNTk5NTJiIiwicmVhbG1fYWNjZXNzIjp7InJvbGVzIjpbInJlcG9ydC1ub24tYW5vbnltaXplZCIsIiRmZXRjaC1tZWFzdXJlbWVudC1zdGF0cyIsIkJpbmFyeS5yZWFkIl19LCJjb250ZXh0Ijp7Im9yZ2FuaXphdGlvbl9pZCI6Imh0dHBzOi8vb3JnYW5pemF0aW9uLmNpdC1yZXBvcnRpbmctMTE4Mi5sb2NhbC9maGlyL09yZ2FuaXphdGlvbi8yMjQxMiIsInRlYW1fb25fZW9jIjpmYWxzZX0sInVzZXJfdHlwZSI6IlBSQUNUSVRJT05FUiJ9.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/6.10.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "anonymization",
      "valueString": "None"
    },
    {
      "name": "organization",
      "valueReference": {
        "reference": "https://organization.cit-reporting-1182.local/fhir/Organization/22412"
      }
    },
    {
      "name": "period",
      "valuePeriod": {
        "start": "2025-02-04T14:14:18+00:00",
        "end": "2025-02-04T14:14:18+00:00"
      }
    }
  ]
}

```

**Response**

```
{
  "resourceType": "Binary",
  "id": "1",
  "meta": {
    "versionId": "1",
    "lastUpdated": "2025-02-04T14:14:19.904+00:00",
    "source": "#c71f0a55-7961-9fda-baa0-9647f7b3fbff",
    "profile": [
      "http://hl7.org/fhir/StructureDefinition/Binary"
    ]
  },
  "contentType": "text/plain",
  "securityContext": {
    "identifier": {
      "value": "9faf9beb-2e25-4f8a-903a-e2b99059952b"
    }
  },
  "data": "Kk5PVCBHRU5FUkFURUQgWUVUKg=="
}

```

