fhir/10.0.0/POST_schedule-measurement-stats.md
# POST Schedule Measurement Stats - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* **POST Schedule Measurement Stats**

## POST Schedule Measurement Stats

`POST [base]/$schedule-measurement-stats`

**Request Headers**

```
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiMDZjZDEzNzAtMTAwOS00MmI1LWJjYjYtN2Y3YzU2YmQ2NWFlIiwicmVhbG1fYWNjZXNzIjp7InJvbGVzIjpbInJlcG9ydC1ub24tYW5vbnltaXplZCIsIiRmZXRjaC1tZWFzdXJlbWVudC1zdGF0cyIsIkJpbmFyeS5yZWFkIl19LCJjb250ZXh0Ijp7Im9yZ2FuaXphdGlvbl9pZCI6Imh0dHBzOi8vb3JnYW5pemF0aW9uLmNpdC1yZXBvcnRpbmctMTMxMy5sb2NhbC9maGlyL09yZ2FuaXphdGlvbi80MTE1MSIsInRlYW1fb25fZW9jIjpmYWxzZX0sInVzZXJfdHlwZSI6IlBSQUNUSVRJT05FUiJ9.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/8.6.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "anonymization",
      "valueString": "None"
    },
    {
      "name": "organization",
      "valueReference": {
        "reference": "https://organization.cit-reporting-1313.local/fhir/Organization/41151"
      }
    },
    {
      "name": "period",
      "valuePeriod": {
        "start": "2026-04-16T11:43:42+00:00",
        "end": "2026-04-16T11:43:42+00:00"
      }
    }
  ]
}

```

**Response Headers**

```
date: Thu, 16 Apr 2026 11:43:44 GMT
x-request-id: 27d5cf94-cd8e-4d5c-a5a3-dc3d1e715b4d
server: istio-envoy
x-envoy-upstream-service-time: 1018
expires: 0
x-frame-options: DENY
pragma: no-cache
last-modified: Thu, 16 Apr 2026 11:43:43 GMT
x-content-type-options: nosniff
x-xss-protection: 0
x-b3-traceid: a996553197265d046bafd8e9b368c37e
x-powered-by: HAPI FHIR 8.6.5 REST Server (FHIR Server; FHIR 4.0.1/R4)
content-location: https://reporting.cit-reporting-1313.local/fhir/Binary/1000/_history/1
content-type: application/fhir+json; charset=UTF-8
location: https://reporting.cit-reporting-1313.local/fhir/Binary/1000/_history/1
cache-control: no-cache, no-store, max-age=0, must-revalidate

```

**Response**

```
{
  "resourceType": "Binary",
  "id": "1000",
  "meta": {
    "versionId": "1",
    "lastUpdated": "2026-04-16T11:43:43.822+00:00",
    "source": "#27d5cf94-cd8e-4d5c-a5a3-dc3d1e715b4d",
    "profile": [
      "http://hl7.org/fhir/StructureDefinition/Binary"
    ]
  },
  "contentType": "text/plain",
  "securityContext": {
    "identifier": {
      "value": "06cd1370-1009-42b5-bcb6-7f7c56bd65ae"
    }
  },
  "data": "Kk5PVCBHRU5FUkFURUQgWUVUKg=="
}

```

